HTML STRUCTURE UPDATED

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1> M.Vaishnavi reddy</h1>
+    <h2> CS&IT</h2>
+    <h3>KL UNIVERSITY</h3>
     
 </body>
 </html>
